# term3d

./: .clang-format  README.md
src/: CMakeLists.txt  CMakePresets.json  extraAssertions.hpp  main.cpp  run.sh
src/drawing/: coord2d.hpp  quantizeChars.cpp  quantizeChars.hpp  setColor.cpp  setColor.hpp  sextantBlocks.cpp  sextantBlocks.hpp
src/rasterizer/: common.hpp  controller.cpp  controller.hpp  interpolate.hpp  rasterizer.cpp  rasterizer.hpp  renderable.cpp  renderable.hpp  scene.cpp  scene.hpp  shapeBuilders.cpp  shapeBuilders.hpp  structures.cpp  structures.hpp  triangles.cpp  triangles.hpp
src/raytracer/: coord2d.hpp  coord3d.hpp  eglconf.hpp  raytracer.cpp  raytracer.glsl  raytracer.hpp
src/util/: floatComparisons.hpp  formatters.hpp
